@@ -3,7 +3,9 @@ Changelog for phpThumbsUp component.
 
 phpThumbsUp 1.1.0
 ================================================
-- Added screen width threshold for responsive design (see documentation for use).
+- Added screen width threshold for responsive design.
+- Added "default" setting for phpThumb parameters that should apply to all thumbs
+  by default
 
 phpThumbsUp 1.0.1
 ================================================
